--- a/package.json
+++ b/package.json
@@ -14,7 +14,22 @@
   ],
   "main": "PagenationListView.js",
   "scripts": {
+    "lint": "./node_modules/.bin/eslint PagenationListView.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "babel-eslint": "^7.1.1",
+    "babel-jest": "19.0.0",
+    "babel-preset-react-native": "1.9.1",
+    "enzyme": "^2.7.1",
+    "eslint": "^3.16.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
+    "react": "~15.4.2",
+    "react-native": "0.41.2",
+    "jest": "19.0.1"
   },
   "author": "Blake Tarter <blakertarter@gmail.com> (http://blaketarter.com)",
   "license": "ISC"
