--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-paginated-listview",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "A simple paginated react-native ListView with a few customization options",
   "keywords": [
     "react",
@@ -39,5 +39,5 @@
     "preset": "react-native"
   },
   "author": "Blake Tarter <blakertarter@gmail.com> (http://blaketarter.com)",
-  "license": "ISC"
+  "license": "MIT"
 }
