--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "paginated",
     "pagenation"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/blaketarter/react-native-paginated-listview"
+  },
   "main": "PaginatedListView.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint PaginatedListView.js",
